# dc-bot

./: .env_example  CLAUDE.md  Dockerfile  README.md  bot.py  pyproject.toml
src/: README.md  __init__.py  config.py  debug_api.py  job104.py  job_search_tool.py  llm_client.py  llm_job_search_example.py  mappings.py
src/bot/: client.py  commands.py
src/core/: __init__.py  job104.py  mappings.py
src/llm/: __init__.py  client.py  tools.py
src/llm/prompt/: __init__.py  raphtalia.py
src/ultrathink/: __init__.py  main.py
src/workflow/: __init__.py  job_analysis.py  job_search.py
src/workflow/prompt/: __init__.py  job_detail_analysis.py  job_search_extract_params.py  job_search_final_response.py
