[project]
name = "dc_bot"
version = "0.1.0"
description = "DC Bot - A Python project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "discord.py>=2.4.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
