[project]
name = "dc-bot"
version = "0.1.0"
description = "Discord bot with 104 job search and LLM integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "discord.py>=2.4.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
]

[dependency-groups]
dev = []
